add restart button, add draw and winner display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header><h1>Tic Tac Toe</h1></header>
+    <header><h1>The Unbeatable Tic Tac Toe</h1></header>
     <div class="gameContainer">
         <div class='field' id="0"></div>
         <div class='field' id="1"></div>
@@ -20,6 +20,10 @@
         <div class='field' id="6"></div>
         <div class='field' id="7"></div>
         <div class='field' id="8"></div>
+        <div id="draw" class="invisible">Draw!</div>
+        <div id="restart">
+            <button id="restartButton"><img src="./restart.svg" style="height: 40px; background-color:#252525; fill: aliceblue; border-radius: 20px;"></button>
+        </div>
     </div>
     <footer>Design by: PP3Ti</footer>
 </body>
